[package]
name = "cloudevents-sdk-coap"
version = "0.1.0"
authors = ["Pranav <adpranavb2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudevents-sdk = {version = "0.3", path = "/home/pranav/Desktop/CloudEvents/sdk-rust"}
coap-lite = "0.3"
lazy_static = "1.4.0"

[dependencies.coap]
version = "0.9"