[package]
name = "cloudevents-sdk-coap"
version = "0.1.0"
authors = ["Pranav <adpranavb2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudevents-sdk = "0.3"
coap = "0.10"
coap-lite = "0.4"
lazy_static = "1.4.0"